# hshchk

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md
.cargo/: config  config.toml
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.bash
hshchk-cli/: Cargo.toml
hshchk-cli/src/: lib.rs  line_output.rs  main.rs  output.rs  ui.rs
hshchk-cli/src/tty/: mod.rs  unix.rs  windows.rs
hshchk-lib/: Cargo.toml
hshchk-lib/src/: .editorconfig  block_hasher.rs  file_hash.rs  file_tree.rs  hash_file.rs  hash_file_process.rs  lib.rs  report.rs
hshchk-lib/src/test/: mod.rs
hshchk-lib/tests/: hash_file_process.rs
src/: block_hasher.rs  file_hash.rs  file_tree.rs  hash_file.rs  hash_file_process.rs  hshchk.rs  lib.rs  output.rs  speed.rs  ui.rs
test_shared/: Cargo.toml
tests/: hash_file_process.rs
