[package]
name = "hshchk"
description = "A command-line file tree hash checker"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["command-line-utilities"]
version = "0.1.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT"
keywords = ["checksum", "hash", "file", "tree", "recursive"]
edition = "2018"

[[bin]]
name = "hshchk"
path = "src/hshchk.rs"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
blake2 = "0.9"
blake3 = "0.3"
cancellation = "0.1"
crossbeam = "0.8"
ctrlc = "3.1"
digest = "0.9"
hex = "0.4"
md-5 = "0.9"
num-format = "0.4"
regex = "1"
sha-1 = "0.9"
sha2 = "0.9"
strum = "0.19"
strum_macros = "0.19"
unicode-segmentation = "1.6.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
test_shared = { path = "test_shared" }

[target.'cfg(not(windows))'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "processenv",
    "winbase",
    "wincon",
    "winnt",
]
