[package]
name = "hshchk"
description = "A command-line file tree hash checker"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["command-line-utilities"]
version = "0.2.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT"
keywords = ["checksum", "hash", "file", "tree", "recursive"]
edition = "2018"

[[bin]]
name = "hshchk"
path = "src/hshchk.rs"

[dependencies]
blake2 = "0.10"
crossbeam = "0.8"
ctrlc = "3.4"
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
num-format = "0.4"
regex = "1"
sha-1 = "0.10"
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
terminal_size = "0.3"
tokio = "1.38"
tokio-util = "0.7"
unicode-segmentation = "1.11"

[dependencies.clap]
version = "4"
features = ["cargo", "suggestions", "wrap_help"]

[dependencies.blake3]
version = "1.5"
features = ["traits-preview"]

[dev-dependencies]
test_shared = { path = "test_shared" }

[target.'cfg(not(windows))'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "processenv",
    "winbase",
    "wincon",
    "winnt",
]
