[package]
name = "hshchk"
description = "A command-line file tree hash checker"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["command-line-utilities"]
version = "0.1.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hshchk-lib = { path = "../hshchk-lib" }
cancellation = "0.1"
ansi_term = "0.12"
atty = "0.2"
ctrlc = "3.1"
num-format = "0.4"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]