[package]
name = "hshchk"
description = "A command-line file tree hash checker"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["command-line-utilities"]
version = "1.0.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["cli", "checksum", "hash", "file", "folder", "tree", "recursive", "sum", "md5", "sha", "blake"]

[[bin]]
doctest = false
name = "hshchk"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
hshchk-lib = { path = "../hshchk-lib" }
crossbeam = "0.8"
cancellation = "0.1"
ansi_term = "0.12"
atty = "0.2"
ctrlc = "3.1"
num-format = "0.4"
unicode-segmentation = "1.6.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[target.'cfg(not(windows))'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "processenv",
    "winbase",
    "wincon",
    "winnt",
]
