[package]
name = "hshchk-lib"
description = "A command-line hex viewer"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["command-line-utilities"]
version = "0.1.0"
repository = "https://github.com/sharkdp/hexyl"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cancellation = "0.1"
digest = "0.8.0"
sha-1 = "0.8.0"
sha2 = "0.8.0"
blake2 = "0.8.0"
hex = "0.3.2"
ansi_term = "0.11"
atty = "0.2"
ctrlc = "3.1"
strum = "0.13.0"
strum_macros = "0.13.0"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]