[package]
name = "hshchk-lib"
description = "A hash tree file library"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["library"]
version = "0.1.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cancellation = "0.1"
digest = "0.8"
md-5 = "0.8"
sha-1 = "0.8"
sha2 = "0.8"
blake2 = "0.8"
hex = "0.3"
ansi_term = "0.11"
atty = "0.2"
ctrlc = "3.1"
strum = "0.15"
strum_macros = "0.15"
regex = "1"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
nanoid = "0.2"