[package]
name = "hshchk-lib"
description = "A hash tree file library"
authors = ["Marc-André Côté <mac@live.ca>"]
categories = ["library"]
version = "1.0.0"
repository = "https://github.com/macote/hshchk"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
crossbeam = "0.8"
digest = "0.9"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
blake2 = "0.9"
blake3 = "0.3"
cancellation = "0.1"
hex = "0.4"
ansi_term = "0.12"
atty = "0.2"
ctrlc = "3.1"
strum = "0.19"
strum_macros = "0.19"
regex = "1"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]

[dev-dependencies]
nanoid = "0.2"